<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>magkit-multi</artifactId>
        <groupId>com.aperto.magkit</groupId>
        <version>1.3.2</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <groupId>com.aperto.magkit</groupId>
    <artifactId>magkit</artifactId>
    <version>1.3.2</version>
    <name>Aperto Magnolia Kit</name>
    <packaging>jar</packaging>

    <dependencies>
        <dependency>
            <groupId>apertoCommons</groupId>
            <artifactId>apertoCommons</artifactId>
            <version>2.7.3</version>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jsp-api</artifactId>
            <version>2.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- Tobago -->
        <dependency>
            <groupId>org.apache.myfaces.tobago</groupId>
            <artifactId>tobago-tool-apt</artifactId>
            <version>1.0.11</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.myfaces.tobago</groupId>
            <artifactId>tobago-tool-annotation</artifactId>
            <version>1.0.11</version>
        </dependency>
        <!-- Magnolia dependencies -->
        <dependency>
            <groupId>info.magnolia</groupId>
            <artifactId>magnolia-empty-webapp</artifactId>
            <version>${magnolia.version}</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>info.magnolia</groupId>
            <artifactId>magnolia-empty-webapp</artifactId>
            <version>${magnolia.version}</version>
            <type>pom</type>
            <exclusions>
                <exclusion>
                    <artifactId>magnolia-module-cache</artifactId>
                    <groupId>info.magnolia</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- DMS module -->
        <dependency>
            <groupId>info.magnolia</groupId>
            <artifactId>magnolia-module-dms</artifactId>
            <version>1.2.3</version>
        </dependency>
        <dependency>
            <groupId>dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>1.6</version>
        </dependency>
        <!-- Spring e.g. for mail -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring</artifactId>
            <version>2.0.6</version>
        </dependency>
        <!-- testing -->
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>2.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymockclassextension</artifactId>
            <version>2.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>cglib</groupId>
            <artifactId>cglib-nodep</artifactId>
            <version>2.1_3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-mock</artifactId>
            <version>2.0.6</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.mockrunner</groupId>
            <artifactId>mockrunner</artifactId>
            <version>0.3.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.aperto.magkit</groupId>
            <artifactId>magkit-test</artifactId>
            <version>1.3.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--  see http://myfaces.apache.org/tobago/tobago-tool/maven-apt-plugin -->
            <plugin>
                <groupId>org.apache.myfaces.tobago</groupId>
                <artifactId>maven-apt-plugin</artifactId>
                <version>1.0.11</version>
                <executions>
                    <execution>
                        <id>generate-tlds</id>
                        <goals>
                            <goal>execute</goal>
                        </goals>
                        <configuration>
                            <targetFiles>
                                <targetFile>magkit-taglib.tld</targetFile>
                            </targetFiles>
                            <generated>src/main/webapp/WEB-INF/tlds</generated>
                            <resourceTargetPath>META-INF</resourceTargetPath>
                            <factory>org.apache.myfaces.tobago.apt.TaglibAnnotationProcessorFactory</factory>
                            <nocompile>true</nocompile>
                            <encoding>Windows-1252</encoding>
                            <target>1.5</target>
                            <verbose>false</verbose>
                            <includes>
                                <include>com/aperto/magkit/taglib/**/*.java</include>
                            </includes>
                            <force>true</force>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- http://cargo.codehaus.org/ -->
            <plugin>
                <groupId>org.codehaus.cargo</groupId>
                <artifactId>cargo-maven2-plugin</artifactId>
                <version>${cargoVersion}</version>
                <configuration>
                    <!-- Container configuration -->
                    <container>
                        <containerId>tomcat5x</containerId>
                        <type>installed</type>
                        <zipUrlInstaller>
                            <url>http://www.apache.org/dist/tomcat/tomcat-5/v5.5.25/bin/apache-tomcat-5.5.25.zip</url>
                            <installDir>${java.io.tmpdir}/magkit-tomcat</installDir>
                        </zipUrlInstaller>
                        <dependencies>
                            <dependency>
                                <groupId>org.springframework</groupId>
                                <artifactId>spring</artifactId>
                            </dependency>
                            <dependency>
                                <groupId>apertoCommons</groupId>
                                <artifactId>apertoCommons</artifactId>
                            </dependency>
                            <dependency>
                                <groupId>commons-lang</groupId>
                                <artifactId>commons-lang</artifactId>
                            </dependency>
                            <dependency>
                                <groupId>commons-collections</groupId>
                                <artifactId>commons-collections</artifactId>
                            </dependency>
                        </dependencies>
                    </container>

                    <!-- Configuration to use with the container -->
                    <configuration>
                        <type>existing</type>
                        <home>${basedir}/tomcat</home>
                        <properties>
                            <cargo.servlet.port>9090</cargo.servlet.port>
                            <!-- <cargo.jvmargs>-Dmagnolia.config.home=${basedir}/magnolia-config -Xms128M -Xmx800M -XX:MaxPermSize=128M -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</cargo.jvmargs> -->
                            <cargo.jvmargs>-Xms128M -Xmx800M -XX:MaxPermSize=128M -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</cargo.jvmargs>
                        </properties>
                    </configuration>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>author</id>
            <build>
                <plugins>
                    <!-- see http://maven.apache.org/plugins/maven-clean-plugin -->
                    <plugin>
                        <artifactId>maven-clean-plugin</artifactId>
                        <configuration>
                            <filesets>
                                <fileset>
                                    <directory>${basedir}/tomcat</directory>
                                </fileset>
                            </filesets>
                        </configuration>
                    </plugin>
                    <!-- http://cargo.codehaus.org/ -->
                    <plugin>
                        <groupId>org.codehaus.cargo</groupId>
                        <artifactId>cargo-maven2-plugin</artifactId>
                        <version>${cargoVersion}</version>
                        <configuration>
                            <!-- Configuration with deploy -->
                            <configuration>
                                <type>standalone</type>
                                <deployables>
                                    <deployable>
                                        <groupId>info.magnolia</groupId>
                                        <artifactId>magnolia-empty-webapp</artifactId>
                                        <type>war</type>
                                        <properties>
                                            <context>author</context>
                                        </properties>
                                    </deployable>
                                </deployables>
                            </configuration>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <reporting>
    </reporting>
</project>